<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="github.shawlaw.app.callintwo.activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/header_selected_list"
            android:textColor="#ee000000"
            android:textStyle="bold"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/text_msg"
            android:textColor="#ee000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/call"
            android:textColor="#ee000000"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadow_list_header"
        />
    <ListView
        android:id="@+id/selected_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        tools:listitem="@layout/item_selected_list"
        />
    <TextView
        android:id="@+id/selected_list_empty_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/btn_add_contact"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|right"
        android:background="@drawable/bg_btn_action"
        android:layout_margin="20dp"
        android:src="@drawable/person_add"
        android:padding="8dp"
        />
</FrameLayout>
